AUTHX-15 Introduce LocalErrorService (#27)
* AUTHX-15 Introduce LocalErrorService

* AUTHX-15 Streamline localerror import
