# docs/swagger.json
@@ -166,40 +166,6 @@
                 }
             }
         },
-        "/profiles/me": {
-            "get": {
-                "description": "Get current user's profile",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Profiles"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success Response",
-                        "schema": {
-                            "$ref": "#/definitions/internal_profile.GetResponseDto"
-                        }
-                    },
-                    "400": {
-                        "description": "BadRequest"
-                    },
-                    "500": {
-                        "description": "InternalServerError"
-                    }
-                }
-            }
-        },
         "/profiles/me/employee-id": {
             "get": {
                 "description": "Get current user's employee ID",
@@ -388,7 +354,7 @@
         }
     },
     "definitions": {
-        "github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError": {
+        "github_com_mrexmelle_connect-authx_internal_dto.ServiceError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -403,7 +369,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -422,7 +388,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -441,7 +407,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -449,7 +415,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -480,7 +446,7 @@
                     "type": "string"
                 },
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -491,7 +457,7 @@
                     "$ref": "#/definitions/internal_profile.Entity"
                 },
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -510,7 +476,7 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
@@ -532,7 +498,7 @@
                     "$ref": "#/definitions/internal_session.SigningResult"
                 },
                 "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dtoresponse.ServiceError"
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-authx_internal_dto.ServiceError"
                 }
             }
         },
